# RFP_Analyzer

./: .gitignore  README.md  compose.yaml  db.Dockerfile  main.py  pyproject.toml  qrant.Dockerfile  web.Dockerfile
common/: document_filter.json  embedding_model.py  gto_embedded_data.csv  pdf_extract.py  prompts.json  utils.py  web_requirements.txt
data/: 2. 제안요청서_다누림홈페이지.hwp  2. 제안요청서_서울관광온라인서비스 3.hwpx  20230711271-01_1689655942414_2._제안요청서_아카이브_변경공고 1.hwpx  20231242760-00_1703636762885_2._제안요청서(통합시스템) 2.hwpx  20240417750-00_1712799526355_2._제안요청서_다누림홈페이지 2.hwp  20240417805-00_1712800396330_2._제안요청서_MICE시스템 3.hwp  2025년 경기관광정보서비스 통합 운영 과업지시서.hwp
database/: init.sql
monitoring/: main.py
search_engine/: main.py
web/: main.py  rfp.py  rfp2.py  run_app.sh
